# swagger.yaml
@@ -1,7 +1,7 @@
 swagger: '2.0'
 info:
   title: Fortifi API
-  version: '3.61.0'
+  version: '3.60.0'
   termsOfService: 'https://fortifi.io/legal/terms/api'
   description: >
     The second version of the Fortifi API is an exciting step forward towards
@@ -2234,7 +2234,11 @@ paths:
         200:
           description: Pending Payment Method Created
           schema:
-            $ref: '#/definitions/Envelope'
+            allOf:
+              - $ref: '#/definitions/Envelope'
+              - properties:
+                  data:
+                    $ref: '#/definitions/Fid'
         x-400:
           description: |
             Invalid data supplied
@@ -2252,7 +2256,7 @@ paths:
         - OAuth:
             - customer
             - customer.readonly
-        - accessToken: []
+        - accessToken: [ ]
       parameters:
         - $ref: '#/parameters/customerFid'
         - $ref: '#/parameters/paymentFid'
@@ -2280,7 +2284,7 @@ paths:
       security:
         - OAuth:
             - customer
-        - accessToken: []
+        - accessToken: [ ]
       parameters:
         - $ref: '#/parameters/customerFid'
         - $ref: '#/parameters/paymentFid'
@@ -4098,65 +4102,6 @@ paths:
               - properties:
                   data:
                     $ref: '#/definitions/Order'
-        x-404:
-          description: Order not found
-        default:
-          description: Error
-          schema:
-            $ref: '#/definitions/Envelope'
-
-  '/orders/{orderFid}/items':
-    get:
-      summary: List an orders items
-      tags:
-        - Orders
-      security:
-        - OAuth:
-            - orders.readonly
-        - accessToken: []
-      parameters:
-        - $ref: '#/parameters/orderFid'
-      responses:
-        200:
-          description: List of order items
-          schema:
-            allOf:
-              - $ref: '#/definitions/Envelope'
-              - properties:
-                  data:
-                    $ref: '#/definitions/OrderProducts'
-        default:
-          description: Error
-          schema:
-            $ref: '#/definitions/Envelope'
-
-  '/orders/{orderFid}/items/{productFid}/{orderItemFid}':
-    put:
-      summary: Update an order item
-      tags:
-        - Orders
-      security:
-        - OAuth:
-            - orders
-        - accessToken: []
-      parameters:
-        - $ref: '#/parameters/orderFid'
-        - $ref: '#/parameters/productFid'
-        - $ref: '#/parameters/orderItemFid'
-        - name: payload
-          in: body
-          required: true
-          schema:
-            $ref: '#/definitions/UpdateOrderItemPayload'
-      responses:
-        200:
-          description: Order retrieved
-          schema:
-            allOf:
-              - $ref: '#/definitions/Envelope'
-              - properties:
-                  data:
-                    $ref: '#/definitions/BoolMessage'
         x-404:
           description: Order not found
         default:
@@ -6024,11 +5969,6 @@ parameters:
     in: path
     required: true
     type: string
-  orderItemFid:
-    name: orderItemFid
-    in: path
-    required: true
-    type: string
   offerFid:
     name: offerFid
     in: path
@@ -7601,7 +7541,7 @@ definitions:
         format: float
 
   Orders:
-    description: List of orders
+    description: Generic Response
     properties:
       orders:
         type: array
@@ -7609,7 +7549,7 @@ definitions:
           $ref: '#/definitions/Order'
 
   Order:
-    description: An Order
+    description: Generic Response
     allOf:
       - $ref: '#/definitions/Entity'
       - properties:
@@ -7677,17 +7617,6 @@ definitions:
             format: float
           authorizeId:
             type: string
-
-  UpdateOrderItemPayload:
-    properties:
-      parentFid:
-        type: string
-      identity:
-        type: string
-      setProperties:
-        $ref: '#/definitions/PropertyBulkSetPayload'
-      displayName:
-        type: string
 
   OrderProducts:
     description: Generic Response
@@ -8690,6 +8619,8 @@ definitions:
     description: Create a pending payment method
     properties:
       name:
+        type: string
+      accountHolder:
         type: string
       scheme:
         type: string
